tests/fixtures/invalid/max_str_float.py
# Cannot call max() with Str, Float
x = max("hello", 1.0)
